--- a/ToDo list/index.html
+++ b/ToDo list/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>ToDo List</title>
     <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.min.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <body>
