added a default todo

--- a/ToDo list/index.html
+++ b/ToDo list/index.html
@@ -15,6 +15,7 @@
             <li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
             <li><span><i class="fa fa-trash"></i></span> Buy new Robes</li>
             <li><span><i class="fa fa-trash"></i></span> Visit Ron</li>
+            <li><span><i class="fa fa-trash"></i></span> Walk the Dog</li>
         </ul>
         
     </div>
