changed the font-family to cursive

--- a/ToDo list/index.html
+++ b/ToDo list/index.html
@@ -6,6 +6,12 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <style>
+      body{
+          font-family: cursive;
+      }
+  </style>
+
 <body>
     <div id="container">
         <h1>To-Do List<i class="fa fa-plus"></i></h1>
